# payday2-autosplitter

./: .gitignore  LICENSE  README.md
AutoSplitter/: autosplitter.lua  menu.json  menu.lua  mod.txt  split_hooks.lua  supermod.xml
AutoSplitter/loc/: english.json
AutoSplitter/lua/: autosplitter.lua  menu.json  menu.lua  split_hooks.lua
AutoSplitter/lua/loc/: english.json
NativePlugin/: CMakeLists.txt
NativePlugin/include/: connection.h  lua_interface.h
NativePlugin/src/: connection.cpp  legal.cpp  lua_interface.cpp  main.cpp
